--- a/blog-detail.html
+++ b/blog-detail.html
@@ -69,36 +69,12 @@
 <div class="fixed top-0 left-0 w-full h-1 z-[60]">
 <div class="h-full bg-primary w-[35%]"></div>
 </div>
-<!-- Top Navigation -->
-<header class="sticky-nav sticky top-0 z-50 border-b border-gray-100 px-6 lg:px-12 py-4">
-<div class="max-w-7xl mx-auto flex items-center justify-between">
-<div class="flex items-center gap-2 group cursor-pointer">
-<div class="w-8 h-8 bg-primary rounded flex items-center justify-center text-white">
-<span class="material-symbols-outlined text-xl">layers</span>
-</div>
-<span class="text-xl font-bold tracking-tight text-[#111827]">Wallify IG</span>
-</div>
-<nav class="hidden lg:flex items-center gap-8">
-<a class="text-sm font-medium text-gray-600 hover:text-primary transition-colors" href="#">Features</a>
-<a class="text-sm font-medium text-gray-600 hover:text-primary transition-colors" href="#">Documentation</a>
-<a class="text-sm font-medium text-gray-600 hover:text-primary transition-colors" href="#">Pricing</a>
-<a class="text-sm font-medium text-gray-600 hover:text-primary transition-colors" href="#">FAQ</a>
-<a class="text-sm font-medium text-gray-600 hover:text-primary transition-colors" href="#">About</a>
-<a class="text-sm font-medium text-primary" href="#">Blog</a>
-</nav>
-<div class="flex items-center gap-3">
-<button class="hidden sm:block text-sm font-semibold text-gray-700 hover:text-primary px-4 py-2">Login</button>
-<button class="bg-primary text-white text-sm font-bold px-5 py-2.5 rounded-lg hover:brightness-110 transition-all shadow-sm">
-                    Get Started
-                </button>
-</div>
-</div>
-</header>
+<div id="site-header"></div>
 <main class="pt-16 pb-24">
 <!-- Article Header -->
 <article class="max-w-[800px] mx-auto px-6">
 <div class="flex items-center gap-2 text-sm font-medium mb-6">
-<a class="text-primary hover:underline" href="#">Blog</a>
+<a class="text-primary hover:underline" href="blog.html">Blog</a>
 <span class="text-gray-400">/</span>
 <span class="text-gray-500">Engineering</span>
 </div>
@@ -214,62 +190,6 @@
 </div>
 </section>
 </main>
-<!-- Footer -->
-<footer class="bg-white border-t border-gray-100 pt-20 pb-12">
-<div class="max-w-7xl mx-auto px-6">
-<div class="grid grid-cols-2 md:grid-cols-5 gap-12 mb-20">
-<div class="col-span-2">
-<div class="flex items-center gap-2 mb-6">
-<div class="w-6 h-6 bg-primary rounded flex items-center justify-center text-white">
-<span class="material-symbols-outlined text-sm">layers</span>
-</div>
-<span class="text-lg font-bold tracking-tight">Wallify IG</span>
-</div>
-<p class="text-gray-500 text-sm max-w-xs leading-relaxed">
-                        The ultimate platform for high-end digital wallpapers and asset management for social creators.
-                    </p>
-</div>
-<div>
-<h4 class="font-bold text-sm text-[#111827] mb-6 uppercase tracking-widest">Product</h4>
-<ul class="space-y-4">
-<li><a class="text-sm text-gray-500 hover:text-primary transition-colors" href="#">Features</a></li>
-<li><a class="text-sm text-gray-500 hover:text-primary transition-colors" href="#">Integrations</a></li>
-<li><a class="text-sm text-gray-500 hover:text-primary transition-colors" href="#">Pricing</a></li>
-<li><a class="text-sm text-gray-500 hover:text-primary transition-colors" href="#">Changelog</a></li>
-</ul>
-</div>
-<div>
-<h4 class="font-bold text-sm text-[#111827] mb-6 uppercase tracking-widest">Company</h4>
-<ul class="space-y-4">
-<li><a class="text-sm text-gray-500 hover:text-primary transition-colors" href="#">About Us</a></li>
-<li><a class="text-sm text-gray-500 hover:text-primary transition-colors" href="#">Careers</a></li>
-<li><a class="text-sm text-gray-500 hover:text-primary transition-colors" href="#">Blog</a></li>
-<li><a class="text-sm text-gray-500 hover:text-primary transition-colors" href="#">Contact</a></li>
-</ul>
-</div>
-<div>
-<h4 class="font-bold text-sm text-[#111827] mb-6 uppercase tracking-widest">Legal</h4>
-<ul class="space-y-4">
-<li><a class="text-sm text-gray-500 hover:text-primary transition-colors" href="#">Privacy</a></li>
-<li><a class="text-sm text-gray-500 hover:text-primary transition-colors" href="#">Terms</a></li>
-<li><a class="text-sm text-gray-500 hover:text-primary transition-colors" href="#">Cookie Policy</a></li>
-</ul>
-</div>
-</div>
-<div class="pt-8 border-t border-gray-100 flex flex-col md:flex-row justify-between items-center gap-4">
-<p class="text-xs text-gray-400">© 2023 Wallify IG Inc. All rights reserved.</p>
-<div class="flex items-center gap-6">
-<a class="text-gray-400 hover:text-primary transition-colors" href="#">
-<span class="material-symbols-outlined text-xl">public</span>
-</a>
-<a class="text-gray-400 hover:text-primary transition-colors" href="#">
-<span class="material-symbols-outlined text-xl">brand_awareness</span>
-</a>
-<a class="text-gray-400 hover:text-primary transition-colors" href="#">
-<span class="material-symbols-outlined text-xl">rss_feed</span>
-</a>
-</div>
-</div>
-</div>
-</footer>
+<div id="site-footer"></div>
+<script src="components.js"></script>
 </body></html>
